# Ai-Orchestrator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
ai_orchestrator/: __init__.py  __main__.py  agents.py  cli.py  config.py  hardware.py  ollama_client.py  orchestrator.py  research.py
tests/: test_hardware.py  test_orchestrator.py
